--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 .about-section {
-    padding-top: 60px; /* space between navbar and heading */
+    padding-top: 60px; 
     padding-bottom: 40px;
 
 }
@@ -30,7 +30,7 @@ body {
 .about-section2 {
   position: relative;
   z-index: 1;
-  color: rgb(0, 0, 0); /* make text visible on GIF */
+  color: rgb(0, 0, 0); 
   padding: 80px 20px;
   overflow: hidden;
 }
